--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.10)
 project(ImageCompressCpp VERSION 1.0)
 
 # Set C++ standard (using 17, as it's common and well-supported)
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 # Define where the compiled executables should be placed
@@ -11,12 +11,12 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/build")
 # Define the executable target
 add_executable(ImageCompressCpp
     src/main.cpp
-    src/file_helpers.cpp
+    src/image_processor.cpp
 )
 
 # Tell CMake where to find all your headers
 target_include_directories(ImageCompressCpp PRIVATE 
-    ${CMAKE_CURRENT_SOURCE_DIR}/include   # For file_helpers.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/include   
     ${CMAKE_CURRENT_SOURCE_DIR}           # For stb_image.h, etc.
 )
 
