--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,47 +1,15 @@
 {
     "version": "2.0.0",
-    "tasks": [
-        {
-            "label": "Build ImageCompressCpp",
-            "type": "shell",
-            "command": "cmake",
-            "args": [
-                "-S", ".",
-                "-B", "build",
-                "-DCMAKE_BUILD_TYPE=Debug"
-            ],
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
-            "problemMatcher": ["$gcc"],
-            "detail": "Build the project using CMake."
-        },
-        {
-            "label": "Build and Compile",
-            "type": "shell",
-            "command": "cmake",
-            "args": [
-                "--build", "build"
-            ],
-            "group": {
-                "kind": "build",
-                "isDefault": false
-            },
-            "problemMatcher": ["$gcc"],
-            "detail": "Compile the project using CMake."
-        }
-    ],
     "configurations": [
         {
             "name": "Debug ImageCompressCpp",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/build/ImageCompressCpp", // Path to your compiled binary
+            "program": "${workspaceFolder}/build-linux-debug/ImageCompress",
             "args": [
                 "--outdir", "/home/chris/Pictures/website/sm",
                 "--imgdir", "/home/chris/Pictures/website/",
-                "--size", "30",
+                "--width", "30",
                 "--quality", "30"
             ],
             "stopAtEntry": false,
@@ -49,7 +17,8 @@
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
-            "miDebuggerPath": "/usr/bin/gdb", // Adjust if gdb is in a different location
+            "miDebuggerPath": "/usr/bin/gdb",
+            "preLaunchTask": "Build Linux Debug",
             "setupCommands": [
                 {
                     "description": "Enable pretty-printing for gdb",
