--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,22 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.15)
 project(ImageCompressCpp VERSION 1.0)
 
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
+
+# Include FetchContent module
+include(FetchContent)
+
+# Fetch FLTK
+FetchContent_Declare(FLTK
+  GIT_REPOSITORY  https://github.com/fltk/fltk
+  GIT_TAG         master
+  GIT_SHALLOW     TRUE
+)
+
+message(STATUS "Download and build FLTK if necessary, please wait...")
+FetchContent_MakeAvailable(FLTK)
+message(STATUS "Download and build FLTK - done.")
 
 # Set the executable name based on the target OS
 if(WIN32)
@@ -30,6 +44,7 @@ find_package(Threads REQUIRED)
 # Link libraries
 target_link_libraries(${EXE_NAME} PRIVATE
     Threads::Threads
+    fltk::fltk
 )
 
 # Windows-specific static linking
